name:           typereplike-lens
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         eric
synopsis:       Lenses for 'Tagged' 'STypeRep's. In a separate package so
    that typereplike itself doesn't have to depend on lens.
library
  hs-source-dirs:  src
  build-depends:
                   base >= 4,
                   tagged >=0.7 && <0.8,
                   containers >=0.5 && <0.6,
                   mtl >=2.1 && <2.3,
                   lens >= 4 && <5,
                   Peano >=0.0.1 && <1.0,
                   peano-extras >= 0.1 && <1.0,
                   typereplike >= 0.1 && <0.2
  ghc-options:     -Wall
  exposed-modules:
                   Data.TypeRepLike.Lens
test-suite typereplike-lens-tests
  type:exitcode-stdio-1.0
  hs-source-dirs: tests, src
  main-is: MainTestSuite.hs
  build-depends:
                   base >= 4,
                   tagged >=0.7 && <0.8,
                   containers >=0.5 && <0.6,
                   mtl >=2.1 && <2.3,
                   lens >= 4 && <5,
                   Peano >=0.0.1 && <1.0,
                   peano-extras >= 0.1 && <1.0,
                   typereplike >= 0.1 && <0.2,
                   HUnit,
                   QuickCheck,
                   test-framework,
                   test-framework-hunit,
                   test-framework-quickcheck2
